Redone the way the ball gets its direction changed on collision with objects. Added a top edge (Roof) along with an edge script that will work on either side of the paddle or above it.

--- a/Keep Up/Assembly-CSharp-vs.csproj
+++ b/Keep Up/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
      <Compile Include="Assets\MyScripts\BallMovement.cs" />
      <Compile Include="Assets\MyScripts\CollisionDetection\BallCollisionDetector.cs" />
+     <Compile Include="Assets\MyScripts\CollisionDetection\EdgeCollision.cs" />
      <Compile Include="Assets\MyScripts\CollisionDetection\PaddleCollisionDetector.cs" />
      <Compile Include="Assets\MyScripts\My2DController.cs" />
      <Compile Include="Assets\MyScripts\MyController.cs" />
