--- a/Keep Up/Assembly-CSharp-vs.csproj
+++ b/Keep Up/Assembly-CSharp-vs.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\MyScripts\BallMovement.cs" />
-     <Compile Include="Assets\MyScripts\CollisionDetection\BallCollisionDetector.cs" />
+     <Compile Include="Assets\MyScripts\CollisionDetection\BallCollision.cs" />
      <Compile Include="Assets\MyScripts\CollisionDetection\BrickCollision.cs" />
      <Compile Include="Assets\MyScripts\CollisionDetection\EdgeCollision.cs" />
      <Compile Include="Assets\MyScripts\CollisionDetection\PaddleCollisionDetector.cs" />
